[tool.poetry]
name = "ah-ml-toolkit"
version = "0.1.0"
description = ""
authors = ["Alexander Hill <me@alxhill.com>"]
readme = "README.md"
packages = [{include = "ah_ml_toolkit"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13"
torchvision = "^0.14.1"
numpy = "^1.24.1"
pillow = "^9.4.0"
timm = "^0.6.12"
opencv-python = "^4.7.0.68"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.2"
ipywidgets = "^8.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
